
  * mago debugger: fixed crash when there is no sstStaticSym section in the debug info
  * mago debugger: fixed local variables not shown in last function of an object file
  * mago debugger: fixed display of TLS variables
  * mago debugger: added workaround for bad line number debug info, causing mago to switch to assembly easily
  * mago debugger: globals and statics can now be displayed without specifying complete scope
  * cv2pdb: fixed patching of autoexp.dat when the install path contained spaces
  * fix: the import path set in the global options never made it to the command line
  * fixed parser to accept "class B() if(true) : A {}"
  * fixed parser to support import as statement
  * building druntime browse info now uses src folder (di files look ugly and do not compile)
  * building browse info now writes to "Visual D" output pane
  * F1 searches language and phobos documentation for help on identifier
  * added highlighting of asm block, using new colors "Visual D Register/Mnemonic" and "Disabled/Token String" variants
  * parsing and outlining now aborted when text changes, so editing is more responsive with large source files

2011-12-03 Version 0.3.29

  * highlighting: new colors for user defined list of types (defaults to basic types in object.d)
  * disabled versions: fixed wrong highlighting when editing before conditional
  * token replace dialog: fixed empty dialog when opening with default size
  * fixed crash when building a project with a configuration that is not available in a dependent project
  * fixed freeze in startup due to thread starting issues (probably only happened with more than 2 cores)
  * added C++ to D conversion wizard
  * added installation for Visual Studio 11
  * tweaked dialogs to better integrate with VS

unreleased Version 0.3.30

  * fixed utf8 to OLE string conversion, that could get in the way when using non ascii file names
  * property pages now adjust its font abd size to the IDE environment